--- a/shaicha-manager/src/main/resources/templates/information/student/二维码.html
+++ b/shaicha-manager/src/main/resources/templates/information/student/二维码.html
@@ -16,7 +16,7 @@
    <p><span style="font-family:'Calibri';font-size:10.0pt;">班级：</span><span style="font-family:'Courier New';font-size:10.0pt;background-color:#ffffff;" th:text="${studentClass}"></span><span id="_GoBack"></span></p>
    <p><br /></p>
    <p><br /></p>
-   <p><span style="font-family:'Calibri';font-size:10.0pt;"></span><img th:src="${QRCode}"></p>
+   <p><span style="font-family:'Calibri';font-size:10.0pt;"></span><img th:src="${QRCode}" alt="图像数据缺失"></p>
   </div>
  </body>
 </html>
