--- a/shaicha-manager/src/main/resources/templates/index_v1.html
+++ b/shaicha-manager/src/main/resources/templates/index_v1.html
@@ -31,7 +31,7 @@
                     <div>
                         <span><img alt="image" class="img-circle" height="60" width="60" th:src="${picUrl}"/></span>
                         <h3 class="" style="color: #ffffff">
-                            </i>筛查后台管理
+                            </i>近视防控数据平台
                         </h3>
                     </div>
                     <div class="dropdown profile-element hidden">
@@ -171,7 +171,7 @@
                     seamless></iframe>
         </div>
         <div class="footer">
-            <div class="pull-right">筛查后台管理</div>
+            <div class="pull-right">近视防控数据平台</div>
         </div>
     </div>
     <!--右侧部分结束-->
