--- a/shaicha-manager/src/main/resources/templates/login.html
+++ b/shaicha-manager/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>筛查后台管理</title>
+    <title>儿童青少年近视防控大数据平台</title>
     <meta name="keywords" content="筛查后台管理系统">
     <meta name="description" content="筛查后台管理系统">
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -32,11 +32,11 @@
         <div class="col-sm-7">
             <div class="signin-info">
                 <div class="logopanel m-b">
-                    <h1>筛查后台管理</h1>
+                    <h1>大数据平台</h1>
                 </div>
                 <div class="m-b"></div>
                 <h3>
-                    欢迎使用 <strong>筛查后台管理系统</strong>
+                    儿童青少年近视<strong>防控</strong>
                 </h3>
                 <ul class="m-b">
                    <!--  <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>
@@ -56,7 +56,7 @@
         <div class="col-sm-5">
             <form id="signupForm">
                 <h3 class="text-center">用户登录</h3>
-                <p class="m-t-md text-center">欢迎登录筛查后台管理系统</p>
+                <p class="m-t-md text-center">近视防控数据平台管理系统</p>
                 <input type="text" name="username" class="form-control uname"
                        value=""/>
                 <input type="password" name="password"
