--- a/shaicha-manager/src/main/resources/templates/main.html
+++ b/shaicha-manager/src/main/resources/templates/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="panel panel-default">
-    <div class="panel-heading"> <h3>&nbsp;&nbsp;&nbsp;欢迎登录筛查后台管理系统</h3></div>
+    <div class="panel-heading"> <h3>&nbsp;&nbsp;&nbsp;欢迎登录儿童近视防控数据平台管理系统</h3></div>
  <!--     <div style="padding: 10px 0 20px 10px;">
         <h3>&nbsp;&nbsp;&nbsp;项目介绍</h3>
         <ul>
