--- a/shaicha-manager/src/main/resources/templates/main.html
+++ b/shaicha-manager/src/main/resources/templates/main.html
@@ -6,10 +6,122 @@
     <title>欢迎页</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
 </head>
 <body>
-<div class="panel panel-default">
+<div class="panel panel-default" style="background-color: #EEEEEE; top: 1px;">
     <div class="panel-heading"> <h3>&nbsp;&nbsp;&nbsp;欢迎登录筛查后台管理系统</h3></div>
+    
+    <div class="first_area">
+    	<div class="left">
+    		<p class="itemName">
+    			<span>总</span>
+    		</p>
+    		<p class="itemLs">
+    			<span>受检者总数</span>
+    			<span class="total">564564人</span>
+    		</p>
+    	</div>
+    	<div class="right">
+    		<div class="checkItem">
+    			<p class="itemName">
+    				<i class="iconfont icon-yonghuguanli1"></i>
+    			</p>
+    			<p class="itemLs">
+	    			<span>受检者总数</span>
+	    			<span>564564人</span>
+    			</p>
+    		</div>
+    		<div class="checkItem">
+    			<p class="itemName">
+    				<i class="iconfont icon-yonghuguanli1"></i>
+    			</p>
+    			<p class="itemLs">
+	    			<span>受检者总数</span>
+	    			<span>564564人</span>
+    			</p>
+    		</div>
+    		<!-- <div class="checkItem">
+    			<p class="itemName">
+    				<i class="iconfont icon-yonghuguanli1"></i>
+    			</p>
+    			<p class="itemLs">
+	    			<span>受检者总数</span>
+	    			<span>564564人</span>
+    			</p>
+    		</div> -->
+    	</div>
+    </div>
+    
+    <div class="pie_area">
+    	<div class="image-box">
+    		<div class="title">患病率统计</div>
+    		<ul>
+    			<li>
+    				<div class="char_Parent">
+    					<div class="content_area">
+    						<div class="radius_area">
+    							<span>视力低下率</span>
+    						</div>
+    					</div>
+    					<div class="pie_charts" style="width: 240px;height: 300px;-webkit-tap-highlight-color: transparent;user-select: none;position: relative;"></div>
+    				</div>
+    			</li>
+    			<li>
+    				<div class="char_Parent">
+    					<div class="content_area">
+    						<div class="radius_area">
+    							<span>视力低下率</span>
+    						</div>
+    					</div>
+    					<div class="pie_charts" style="width: 240px;height: 300px;-webkit-tap-highlight-color: transparent;user-select: none;position: relative;"></div>
+    				</div>
+    			</li>
+    			<li>
+    				<div class="char_Parent">
+    					<div class="content_area">
+    						<div class="radius_area">
+    							<span>视力低下率</span>
+    						</div>
+    					</div>
+    					<div class="pie_charts" style="width: 240px;height: 300px;-webkit-tap-highlight-color: transparent;user-select: none;position: relative;"></div>
+    				</div>
+    			</li>
+    			<li>
+    				<div class="char_Parent">
+    					<div class="content_area">
+    						<div class="radius_area">
+    							<span>视力低下率</span>
+    						</div>
+    					</div>
+    					<div class="pie_charts" style="width: 240px;height: 300px;-webkit-tap-highlight-color: transparent;user-select: none;position: relative;"></div>
+    				</div>
+    			</li>
+    			<li>
+    				<div class="char_Parent">
+    					<div class="content_area">
+    						<div class="radius_area">
+    							<span>视力低下率</span>
+    						</div>
+    					</div>
+    					<div class="pie_charts" style="width: 240px;height: 300px;-webkit-tap-highlight-color: transparent;user-select: none;position: relative;"></div>
+    				</div>
+    			</li>
+    			<li>
+    				<div class="char_Parent">
+    					<div class="content_area">
+    						<div class="radius_area">
+    							<span>视力低下率</span>
+    						</div>
+    					</div>
+    					<div class="pie_charts" style="width: 240px;height: 300px;-webkit-tap-highlight-color: transparent;user-select: none;position: relative;"></div>
+    				</div>
+    			</li>
+    		</ul>
+    	</div>
+    </div>
+    
  <!--     <div style="padding: 10px 0 20px 10px;">
         <h3>&nbsp;&nbsp;&nbsp;项目介绍</h3>
         <ul>
