--- a/shaicha-manager/src/main/resources/templates/information/student/detailed.html
+++ b/shaicha-manager/src/main/resources/templates/information/student/detailed.html
@@ -22,14 +22,21 @@
 						<div class="columns pull-right">
 							<button class="btn btn-success" onclick="reLoad()">查询</button>
 						</div>
-						<div class="columns pull-right col-md-2 nopadding" >
+						<div class="columns pull-right col-md-2 nopadding ">
+							<input id="endTime" name="endTime" class="form-control" placeholder="结束时间：" type="text">
+						</div>
+						<div class="columns pull-right col-md-2 nopadding">
+							<input id="startTime" name="startTime" class="form-control" placeholder="开始时间：" type="text">
+						</div>
+						<!-- <div class="columns pull-right col-md-2 nopadding" >
 							<select class="form-control" name="checkDate" id="checkDate" >
                         		<option value="">历史检查时间</option>
                         		<option  th:each="list:${list}" th:value="${list.checkDate1}" th:text="${list.checkDate1}"></option>
                     		</select>
-						</div>
+						</div> -->
 					</div>
 					<input id="id" name="id" th:value="${student.id}" type="hidden">
+					<input id="identityCard" name="identityCard" th:value="${student.identityCard}" type="hidden">
 					视力<table id="exampleTable1" data-mobile-responsive="true"></table><br>
 					眼轴长度<table id="exampleTable2" data-mobile-responsive="true"></table><br>
 					眼内压<table id="exampleTable3" data-mobile-responsive="true"></table><br>
@@ -65,5 +72,15 @@
 	</div>
 	<div th:include="include :: footer"></div>
 	<script type="text/javascript" src="/js/appjs/information/student/detailed.js"></script>
+	<script type="text/javascript">
+	laydate.render({
+		elem: '#startTime',
+		type: 'datetime'
+	});
+	laydate.render({
+		elem: '#endTime',
+		type: 'datetime'
+	});
+	</script>
 </body>
 </html>
