--- a/shaicha-manager/src/main/resources/templates/information/student/二维码.html
+++ b/shaicha-manager/src/main/resources/templates/information/student/二维码.html
@@ -9,9 +9,9 @@
    <p><br /></p>
    <p><br /></p>
    <p><span style="font-family:'Calibri';font-size:10.0pt;">姓名： </span><span style="font-family:'Courier New';font-size:10.0pt;background-color:#ffffff;" th:text="${studentName}"></span></p>
-   <p><span style="font-family:'Calibri';font-size:10.0pt;">身份证号：</span><span style="font-family:'Courier New';font-size:10.0pt;background-color:#ffffff;" th:text="${identityCard}"></span></p>
-   <p><span style="font-family:'Calibri';font-size:10.0pt;">性别：</span><span style="font-family:'Courier New';font-size:10.0pt;background-color:#ffffff;" th:text="${studentSex}"></span></p>
-   <p><span style="font-family:'Calibri';font-size:10.0pt;">学校：</span><span style="font-family:'Courier New';font-size:10.0pt;background-color:#ffffff;" th:text="${school}"></span></p>
+  <!--  <p><span style="font-family:'Calibri';font-size:10.0pt;">身份证号：</span><span style="font-family:'Courier New';font-size:10.0pt;background-color:#ffffff;" th:text="${identityCard}"></span></p> -->
+ <!--   <p><span style="font-family:'Calibri';font-size:10.0pt;">性别：</span><span style="font-family:'Courier New';font-size:10.0pt;background-color:#ffffff;" th:text="${studentSex}"></span></p>
+   <p><span style="font-family:'Calibri';font-size:10.0pt;">学校：</span><span style="font-family:'Courier New';font-size:10.0pt;background-color:#ffffff;" th:text="${school}"></span></p> -->
    <p><span style="font-family:'Calibri';font-size:10.0pt;">年级：</span><span style="font-family:'Courier New';font-size:10.0pt;background-color:#ffffff;" th:text="${grade}"></span></p>
    <p><span style="font-family:'Calibri';font-size:10.0pt;">班级：</span><span style="font-family:'Courier New';font-size:10.0pt;background-color:#ffffff;" th:text="${studentClass}"></span><span id="_GoBack"></span></p>
    <p><br /></p>
