--- a/shaicha-manager/src/main/resources/templates/information/student/shifanstudent.html
+++ b/shaicha-manager/src/main/resources/templates/information/student/shifanstudent.html
@@ -67,16 +67,16 @@
 									<input id="endDate" name="endDate" class="form-control" placeholder="导出结束时间：" type="text">
 								</div>
 					</div>
-					<!-- <table id="exampleTable" data-mobile-responsive="true"> -->
+				 <table id="exampleTable" data-mobile-responsive="true"> 
 					</table>
 				</div>
 			</div>
 		</div>
 	</div>
 	<script src="/js/plugins/echarts/echarts.js"></script>
-	<div id="genianlingduanjinshilvfazhanqushi"  style="width: 600px;height: 300px;-webkit-tap-highlight-color: transparent; ></div>
-	<div id="nannvshengjinshilvfazhanqushi"></div>
-	<div id="nannvshengjinshilvfazhanqushi"></div>
+	<!--  <div id="genianlingduanjinshilvfazhanqushi"  style="width: 600px;height: 400px;-webkit-tap-highlight-color: transparent;" ></div>
+	<div id="nannvshengjinshilvfazhanqushi" style="width: 600px;height: 400px;-webkit-tap-highlight-color: transparent;" ></div>
+	<div id="nannvshengjinshilvfazhanqushi"></div> -->
 	<!--shiro控制bootstraptable行内按钮看见性 来自bootdo的创新方案 -->
 		<div>
 			<script type="text/javascript">
