--- a/shaicha-manager/src/main/resources/templates/information/student/shifanshaichadetail.html
+++ b/shaicha-manager/src/main/resources/templates/information/student/shifanshaichadetail.html
@@ -15,6 +15,10 @@
 					<div class="fixed-table-toolbar">
 						
 						<div class="columns pull-right">
+							
+							<button class="btn btn-primary" onclick="window.history.go(-1);">返回</button>
+						</div>
+						<div class="columns pull-right">
 							<input id="identityCard" th:value="${identityCard}" type="hidden">
 							<button class="btn btn-success" onclick="jiazai()">查询</button>
 						</div>
