--- a/shaicha-manager/src/main/resources/templates/information/student/shifanstudent.html
+++ b/shaicha-manager/src/main/resources/templates/information/student/shifanstudent.html
@@ -31,6 +31,9 @@
 								<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="shaichajieguodaochu()">
 									   筛查结果导出
 								</button>
+								<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="baogaoxuexiao()">
+									   检测报告(学校)
+								</button>
 							</div>
 						</div>
 						<div class="columns pull-right">
@@ -88,7 +91,8 @@
 			</script>
 		</div>
 	</div>
-	<div th:include="include :: footer"></div>
-	<script type="text/javascript" src="/js/appjs/information/student/shifanstudent.js"></script>
+		
+	<div th:include="include :: footer"></div>	
+	<script type="text/javascript" src="/js/appjs/information/student/shifanstudent.js"></script>	
 </body>
 </html>
