--- a/shaicha-manager/src/main/resources/templates/information/student/xuexiao.html
+++ b/shaicha-manager/src/main/resources/templates/information/student/xuexiao.html
@@ -51,7 +51,7 @@
 	</div>
 	</div>
 	
-	<div id="overYear" style="width: 800px;height:400px;display: none;"></div>
+	<!-- <div id="overYear" style="width: 800px;height:400px;display: none;"></div>
     
  	<div id="gradeMyopia" style="width: 800px;height:400px;display: none;"></div>
  	
@@ -63,10 +63,10 @@
     
     <div id="overYearSexNv" style="width: 800px;height:400px;display: none;"></div>
     
-    <div id="overYearGradeSex" style="width: 800px;height:400px;display: none;"></div>
+    <div id="overYearGradeSex" style="width: 800px;height:400px;display: none;"></div> -->
 	
 	<div th:include="include::footer"></div>
-	<script src="/js/plugins/echarts/echarts.js"></script>
+	<!-- <script src="/js/plugins/echarts/echarts.js"></script> -->
 	<script type="text/javascript" src="/js/appjs/information/student/xuexiao.js"></script>
 	<script type="text/javascript">
 	
