--- a/shaicha-manager/src/main/resources/templates/main.html
+++ b/shaicha-manager/src/main/resources/templates/main.html
@@ -22,7 +22,7 @@
     		</p>
     		<p class="itemLs">
     			<span>受检者总数</span>
-    			<span class="total">1764人</span>
+    			<span class="total">432335人</span>
     		</p>
     	</div>
     	<div class="right">
@@ -31,8 +31,8 @@
     				<i class="iconfont icon-yonghuguanli1"></i>
     			</p>
     			<p class="itemLs">
-	    			<span>示范校筛查系统</span>
-	    			<span>1714人</span>
+	    			<span>2019年下半年济南示范校筛查系统</span>
+	    			<span>2050人</span>
     			</p>
     		</div>
     		<div class="checkItem">
@@ -40,8 +40,8 @@
     				<i class="iconfont icon-yonghuguanli1"></i>
     			</p>
     			<p class="itemLs">
-	    			<span>普通筛查系统</span>
-	    			<span>50人</span>
+	    			<span>2019年下半年济南普通筛查系统</span>
+	    			<span>422人</span>
     			</p>
     		</div>
     		<!-- <div class="checkItem">
@@ -293,10 +293,10 @@
 	 }
 	 
 	 
-    var option2 = {
+    var option6 = {
    		 title: {
    	       // text: '正常',
-   	        subtext: '5.35%',
+   	        subtext: '6.50%',
    	        textStyle:{
    	            fontSize:16,
    	            color: '#666666'
@@ -351,7 +351,7 @@
    	                }
    	            },
    	            data:[
-							{value:210262, name:'正常'},
+							{value:217183, name:'正常'},
 							{value:15094, name:'患病'}
    	              ]
    	        },
@@ -363,7 +363,7 @@
     var option3 = {
    		 title: {
    	       // text: '正常',
-   	        subtext: '5.12%',
+   	        subtext: '18.8%',
    	        textStyle:{
    	            fontSize:16,
    	            color: '#666666'
@@ -418,7 +418,7 @@
    	                }
    	            },
    	            data:[
-							{value:210262, name:'正常'},
+							{value:188603, name:'正常'},
 							{value:43674, name:'患病'}
    	              ]
    	        },
@@ -498,7 +498,7 @@
     var option2 = {
     		 title: {
     	       // text: '正常',
-    	        subtext: '18.8%',
+    	        subtext: '56.72%',
     	        textStyle:{
     	            fontSize:16,
     	            color: '#666666'
@@ -553,10 +553,10 @@
     	                }
     	            },
     	            data:[
-							{value:200, name:'低度'},
-							{value:100, name:'中度'},
-							{value:15, name:'高度'},
-							{value:850, name:'正常'}
+							{value:76581, name:'低度'},
+							{value:41446, name:'中度'},
+							{value:8988, name:'高度'},
+							{value:96915, name:'正常'}
     	              ]
     	        },
     	            
@@ -567,7 +567,7 @@
     myChart.setOption(option);
     myChart2.setOption(option2);
     myChart3.setOption(option1);
-    myChart4.setOption(option2);
+    myChart4.setOption(option6);
     myChart5.setOption(option3);
     myChart6.setOption(option4);
 </script>
