--- a/shaicha-manager/src/main/resources/templates/information/student/jiaoyuju.html
+++ b/shaicha-manager/src/main/resources/templates/information/student/jiaoyuju.html
@@ -9,16 +9,16 @@
 				<div class="ibox float-e-margins">
 					<div class="ibox-content">
 						<form class="form-horizontal m-t" id="signupForm">
-							<div class="form-group">	
+							<!-- <div class="form-group">	
 								<label class="col-sm-3 control-label">学校：</label>
 								<div class="col-sm-8">
 										<select class="form-control" name="school" id="school" >
-			                        		<!-- <option value="">学校</option> -->
+			                        		<option value="">学校</option>
 			                        		<option th:each="list:${schoolName}" th:value="${list.school}" th:text="${list.school}"></option>
 			                    		</select>
 								</div>
 								
-							</div>
+							</div> -->
 							<div class="form-group">	
 								<label class="col-sm-3 control-label">开始时间：</label>
 								<div class="col-sm-8">
