--- a/shaicha-manager/src/main/resources/templates/information/student/jiaoyuju.html
+++ b/shaicha-manager/src/main/resources/templates/information/student/jiaoyuju.html
@@ -64,6 +64,15 @@
 	</div>
 	</div>
 	
+	<div id="gejinshi" style="width: 800px;height:400px;display: none;"></div>
+    
+ 	<div id="gebuliang" style="width: 800px;height:400px;display: none;"></div>
+ 	
+ 	<div id="nianling" style="width: 800px;height:400px;display: none;"></div>
+    
+    <div id="nannv" style="width: 800px;height:400px;display: none;"></div>
+	
+	
 	<div th:include="include::footer"></div>
 	<script src="/js/plugins/echarts/echarts.js"></script>
 	<script type="text/javascript" src="/js/appjs/information/student/jiaoyuju.js"></script>
@@ -75,7 +84,7 @@
 	laydate.render({
 		elem: '#endDate',
 		type: 'date'
-	});
+	});	
 	</script>
 	
 </body>
