--- a/shaicha-manager/src/main/resources/templates/information/student/xuexiao.html
+++ b/shaicha-manager/src/main/resources/templates/information/student/xuexiao.html
@@ -41,7 +41,7 @@
 							</div>
 							<div class="form-group">
 								<div class="col-sm-8 col-sm-offset-3">
-									<button type="submit" class="btn btn-primary">确定</button>
+									<button type="submit" class="btn btn-primary">导出</button>
 								</div>
 							</div>
 						</form>
@@ -51,7 +51,7 @@
 	</div>
 	</div>
 	
-	<!-- <div id="overYear" style="width: 800px;height:400px;display: none;"></div>
+	<div id="overYear" style="width: 800px;height:400px;display: none;"></div>
     
  	<div id="gradeMyopia" style="width: 800px;height:400px;display: none;"></div>
  	
@@ -63,303 +63,11 @@
     
     <div id="overYearSexNv" style="width: 800px;height:400px;display: none;"></div>
     
-    <div id="overYearGradeSex" style="width: 800px;height:400px;display: none;"></div> -->
+    <div id="overYearGradeSex" style="width: 800px;height:400px;display: none;"></div>
 	
 	<div th:include="include::footer"></div>
-	<!-- <script src="/js/plugins/echarts/echarts.js"></script> -->
+	<script src="/js/plugins/echarts/echarts.js"></script>
 	<script type="text/javascript" src="/js/appjs/information/student/xuexiao.js"></script>
-	<script type="text/javascript">
-	
-	/* // 基于准备好的dom，初始化echarts实例
-	var overYear = echarts.init(document.getElementById('overYear'));
-
-	$.ajax({
- 		async : true,
- 		type: 'get',
- 		url: '/overYear',//请求数据的地址
- 		dataType: "json",  
- 		success: function (result) {
- 			var option = {
- 					 xAxis: {
- 						 type: 'category',
- 			             data: ["2017","2018","2019"]
- 			         },
- 			         yAxis: {
- 			             type: 'value'
- 			         },
- 			         series: [{
- 			        	itemStyle: {
-                            normal: {
-                               // color: '#6cb041',
-                                lineStyle:{
-                                    width:5//设置线条粗细
-                                }
-                            }
-                         },
- 			             data: result.overYearMyopia,
- 			             type: 'line'
- 			         }] 
- 			         
- 			}
-	        
- 			overYear.setOption(option);
- 			
- 		}
-	})	
-	
-	var gradeMyopia = echarts.init(document.getElementById('gradeMyopia'));	
-	
-	$.ajax({
- 		async : true,
- 		type: 'get',
- 		url: '/gradeMyopia',//请求数据的地址
- 		dataType: "json",  
- 		success: function (result) {
- 			//console.info(result.gradeMyopia);
- 			var option = {
- 				    color: ['#3398DB'],
- 				    legend: {
- 			            data:['系列一'],
- 			            bottom : "2%",
- 			        },
- 				    xAxis : [
- 				        {
- 				            type : 'category',
- 				            data : ['一年级', '二年级', '三年级', '四年级', '五年级', '六年级'],
- 				            axisTick: {
- 				                alignWithLabel: true
- 				            }
- 				        }
- 				    ],
- 				    yAxis : [
- 				        {
- 				            type : 'value'
- 				        }
- 				    ],
- 				    series : [{
- 				           // name:'系列一',
- 				            type:'bar',
- 				            barWidth: '30%',
- 				            data:result.gradeMyopia
- 				        }]
- 				}
- 			
- 			gradeMyopia.setOption(option);
- 		}
-	})
-	
-	var overYearGradeMyopia = echarts.init(document.getElementById('overYearGradeMyopia'));	
-	
-	
-	$.ajax({
- 		async : true,
- 		type: 'get',
- 		url: '/overYearGradeMyopia',//请求数据的地址
- 		dataType: "json",  
- 		success: function (result) {
- 			console.info(result.seventeen);
- 			console.info(result.eighteen);
- 			console.info(result.nineteen);
- 			var option = {
- 				    legend: { 
- 				    	data : ['2017', '2018', '2019'],
- 				    	bottom : "1%"
- 				    	},
- 				    //tooltip: {},
- 				    xAxis: {
- 				    	type: 'category',
- 				    	data: ['一年级','二年级','三年级','四年级','五年级','六年级'],
- 				    	},
- 				    yAxis: {type: 'value'},
- 				    series: [
- 				             {
- 				                 name:'2017',
- 				                 type:'bar',
- 				                 data:result.seventeen
- 				             },
- 				             {
- 				                 name:'2018',
- 				                 type:'bar',
- 				                 data:result.eighteen
- 				             },
- 				             {
- 				                 name:'2019',
- 				                 type:'bar',
- 				                 data:result.nineteen
- 				             },
-
- 				    ]
- 				};
- 			
- 			overYearGradeMyopia.setOption(option);
- 			
- 		}
-	})
-	
-	var studentSexMyopia = echarts.init(document.getElementById('studentSexMyopia'));	
-	$.ajax({
- 		async : true,
- 		type: 'get',
- 		url: '/studentSexMyopia',//请求数据的地址
- 		dataType: "json",  
- 		success: function (result) {
- 			console.info(result);
- 			var option = {
- 				    color: ['#3398DB'],
- 				    legend: {
- 			            data:['男生','女生'],
- 			            bottom : "2%",
- 			        },
- 				    xAxis : [
- 				        {
- 				            type : 'category',
- 				            data : ['男生','女生'],
- 				            axisTick: {
- 				                alignWithLabel: true
- 				            }
- 				        }
- 				    ],
- 				    yAxis : [
- 				        {
- 				            type : 'value'
- 				        }
- 				    ],
- 				    series : [{
- 				    	   // name:'男生',
- 				            type:'bar',
- 				            barWidth: '50%',
- 				            data:result.studentSexMyopia
- 				        }]
- 				}
- 			
- 			studentSexMyopia.setOption(option);
- 		}
-	})
-	
-		// 基于准备好的dom，初始化echarts实例
-	var overYearSexNan = echarts.init(document.getElementById('overYearSexNan'));
-
-	$.ajax({
- 		async : true,
- 		type: 'get',
- 		url: '/overYearSexNan',//请求数据的地址
- 		dataType: "json",  
- 		success: function (result) {
- 			var option = {
- 					 xAxis: {
- 						 type: 'category',
- 			             data: ["2017","2018","2019"]
- 			         },
- 			         yAxis: {
- 			             type: 'value'
- 			         },
- 			         series: [{
- 			        	itemStyle: {
-                            normal: {
-                               // color: '#6cb041',
-                                lineStyle:{
-                                    width:5//设置线条粗细
-                                }
-                            }
-                         },
- 			             data: result.studentSexMyopia,
- 			             type: 'line'
- 			         }] 
- 			         
- 			}
-	        
- 			overYearSexNan.setOption(option);
- 			
- 		}
-	})
-	
-		// 基于准备好的dom，初始化echarts实例
-	var overYearSexNv = echarts.init(document.getElementById('overYearSexNv'));
-
-	$.ajax({
- 		async : true,
- 		type: 'get',
- 		url: '/overYearSexNv',//请求数据的地址
- 		dataType: "json",  
- 		success: function (result) {
- 			var option = {
- 					 xAxis: {
- 						 type: 'category',
- 			             data: ["2017","2018","2019"]
- 			         },
- 			         yAxis: {
- 			             type: 'value'
- 			         },
- 			         series: [{
- 			        	itemStyle: {
-                            normal: {
-                               // color: '#6cb041',
-                                lineStyle:{
-                                    width:5//设置线条粗细
-                                }
-                            }
-                         },
- 			             data: result.studentSexMyopia,
- 			             type: 'line'
- 			         }] 
- 			         
- 			}
-	        
- 			overYearSexNv.setOption(option);
- 			
- 		}
-	})
-	
-	var overYearGradeSex = echarts.init(document.getElementById('overYearGradeSex'));	
-	
-	
-	$.ajax({
- 		async : true,
- 		type: 'get',
- 		url: '/overYearGradeSex',//请求数据的地址
- 		dataType: "json",  
- 		success: function (result) {
- 			var option = {
- 				    legend: { 
- 				    	data : ['男生', '女生'],
- 				    	bottom : "1%"
- 				    	},
- 				    //tooltip: {},
- 				    xAxis: {
- 				    	type: 'category',
- 				    	data: ['一年级','二年级','三年级','四年级','五年级','六年级'],
- 				    	},
- 				    yAxis: {type: 'value'},
- 				    series: [
- 				             {
- 				                 name:'男生',
- 				                 type:'bar',
- 				                 data:result.overYearSexNan
- 				             },
- 				             {
- 				                 name:'女生',
- 				                 type:'bar',
- 				                 data:result.overYearSexNv
- 				             }
- 				    ]
- 				};
- 			
- 			overYearGradeSex.setOption(option);
- 			
- 		}
-	}) */
-	
-	 /* setTimeout(function(){ 
-		console.info(overYear.getDataURL()); 
-		console.info(gradeMyopia.getDataURL()); 
-		console.info(overYearGradeMyopia.getDataURL()); 
-		console.info(studentSexMyopia.getDataURL()); 
-		console.info(overYearSexNan.getDataURL()); 
-		console.info(overYearSexNv.getDataURL()); 
-		console.info(overYearGradeSex.getDataURL()); 
-		}, 5000); */
-</script>
-	
 	
 </body>
 </html>
